# go-bindata

./: .gitignore  BUILD.bazel  WORKSPACE
go-bindata/: BUILD.bazel
main/: BUILD.bazel  main.go
