package(default_visibility = ["@//visibility:public"])
licenses(["permissive"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")


go_library(
    name = "bindata",
    srcs = [
        "asset.go",
        "bytewriter.go",
        "config.go",
        "convert.go",
        "debug.go",
        "doc.go",
        "release.go",
        "restore.go",
        "stringwriter.go",
        "toc.go",
    ],
    importpath = "github.com/davidsmd/go-bindata",
    visibility = ["//visibility:public"],
)



